# reverb

./: .gitignore  .prettierignore  .prettierrc  README.md  package.json
.github/workflows/: cloc.yml
assets/: readme.py
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: configs.rs  lib.rs  main.rs  misc.rs  user.rs  youtube.rs
src/lib/: interfaces.ts
src/lib/components/: Header.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/dashboard/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/setup/: +page.svelte
